[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "draygendrop"
version = "1.0.0"
description = "Simple LAN file transfer — server on WSL, clients on Mac/Windows/Linux"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["file-transfer", "lan", "drop", "send"]

dependencies = [
    "flask>=3.0.0",
]

[project.scripts]
ddrop-server = "server:main"
send         = "send:main"

[tool.setuptools]
py-modules = ["server", "send"]
